reports/slurm-output/27aug-11feb/convert_data_to_tensor.sh-kce-57021703.out
  File "src/data/main.py", line 12
    plink_path = os.path.join("..", "..", "dsmwpred", "data", "ukbb", "geno")
    ^
IndentationError: unexpected indent
